[package]
name = "whos-online"
version = "0.1.2"
authors = ["Kitsu <mail@kitsu.me>"]
description = "Set of tool for warching whos tracking their time"
readme = "README.md"
keywords = ["toggl", "telegram", "productivity", "time-management"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/l4l/whos-online"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
daemonize = "0.2"
log = "0.4"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
telebot = "0.2.7"
tokio-core = "0.1"
futures = "0.1.18"
lru_time_cache = "0.8.0"
docopt = "0.8"

[badges]
travis-ci = { repository = "l4l/whos-online" }
